--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
         <title>#</title>
         <style>
             html {
-                background: #0c3e;
+                background:  #ffffe6;
             }
 
             body {
@@ -86,11 +86,6 @@
 
             }
 
-            aside {
-                background:linear-gradient(white, grey);
-                color: blue;
-                border-radius: 5px;
-            }
 
             button{
                 border-radius: 3px;
@@ -106,6 +101,11 @@
 
     <!--Body-->
     <body>
+        <div id="header">
+            <header>
+                <hgroup id="headg"><hgroup>
+            </header>
+		</div>
         <form action="" method='post'>
         		<fieldset>
         			<legend>Sign In</legend>
