--- a/signup.html
+++ b/signup.html
@@ -3,10 +3,10 @@
         <title>Sign Up</title>
         <style type="text/css">
             header{
-                background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(bknd.jpg);
+                background-color:#ffffe6; 
                 min-height: 100vh;
                 background-size: cover; 
-                background-position: center;
+                
                 }
                 .row{
                     max-width: 1200px;
