addition of links

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     background-color: darkorange;
      
 }
+
+{
+	.
+}
 </style>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -75,7 +79,11 @@
             </div>
 	</div>
     <div id="restaurants" class="row">
-        <!-- List the restaturants here -->
+
+        <a href="http://about-thyme.com/">About Theme Restaurant</a><br>
+        <a href="https://www.45degrees.kitchen/">45 degrees</a><br>
+        <a href="http://www.abyssiniarestaurantnairobi.com/">Absynnia</a><br>
+        <a href="http://www.openhouserestaurant.co.ke/">Open House</a>
     </div>
 </div>
 
