--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-<button id="btn">button</button>
+
+
+	<input type="text" name="search" id="search">
+	<button id="btn">button</button>
+	<div id="restaurants">
+		
+	</div>
+
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/eatStreet.js"></script>
 </body>
